tests/negative-fixtures/external_crate_cannot_induce_debug_authority_via_public_bind/src/lib.rs
use tracewake_core::runtime::LoadedWorldRuntime;

pub fn induce_debug_authority_without_operator_proof(runtime: &LoadedWorldRuntime) {
    let _authority = runtime.local_operator_debug_authority();
}
